# mits-validator

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  bandit-report.json  mkdocs.yml  pyproject.toml  test.xml
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api-examples.md  architecture.md  code-of-conduct.md  contributing-guidelines.md  contributing-rules.md  contributing.md  deployment-guide.md  developer-guide.md  error-codes.md  governance.md  index.md  maintainers.md  operational-notes.md  performance-benchmarks.md  project-audit.md  response-envelope.md  roadmap.md  schematron-rules.md  security.md  troubleshooting.md  validating-with-xsd.md  validation-levels.md
docs/adr/: 0001-validation-levels.md
docs/api/: cli.md  rest.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
fixtures/mits5/: invalid-charge-classification.xml  missing-payment-frequency.xml  valid-property.xml
rules/: README.md
rules/mits-5.0/catalogs/: charge-classes.json
rules/mits-5.0/catalogs/enums/: amount-basis.json  amount-per-type.json  charge-requirement.json  lifecycle.json  payment-frequency.json  period-duration.json  refundability-max-type.json  refundability.json  term-basis.json
rules/mits-5.0/catalogs/item-specializations/: parking.json  pet.json  storage.json
rules/mits-5.0/profiles/: default.yaml  enhanced-validation.yaml  ils-receiver.yaml  performance.yaml  pms-publisher.yaml
rules/mits-5.0/schemas/: charge-classes.schema.json  enum.schema.json  parking.schema.json  pet.schema.json  storage.schema.json
rules/mits-5.0/xsd/: schema.xsd
rules/schematron/: rules.sch
rules/schematron/5.0/: business-rules.sch
rules/xsd/: schema.xsd
rules/xsd/5.0/: PropertyMarketing-ILS-5.0.xsd  README.md
schemas/: result-envelope.v1.json
scripts/: smoke-test.sh  validate_catalogs.py
src/mits_validator/: __main__.py  alerting.py  api.py  async_validation.py  cache.py  catalog_loader.py  catalogs.py  cli.py  errors.py  findings.py  health_checks.py  logging_config.py  metrics.py  models.py  profile_loader.py  profile_models.py  profiles.py  rate_limiter.py  streaming_parser.py  url_fetcher.py  validation.py  validation_engine.py
src/mits_validator/levels/: __init__.py  schematron.py  semantic.py  xsd.py
src/mits_validator/validation/: __init__.py  schematron.py  xsd.py
tests/: test_alerting.py  test_async_validation.py  test_cache.py  test_catalog_loader.py  test_cli.py  test_cli_integration.py  test_contract.py  test_defensive_validation.py  test_error_catalog.py  test_health.py  test_health_checks.py  test_main.py  test_metrics.py  test_profile_system.py  test_rate_limiter.py  test_schematron_level.py  test_semantic_level.py  test_streaming_parser.py  test_url_fetcher.py  test_validation.py  test_validation_engine_integration.py  test_xsd_level.py  test_xsd_validation.py
tests/benchmarks/: test_validation_performance.py
tests/schematron/: test_enhanced_schematron_validation.py  test_schematron_validation.py
tests/semantic/: test_semantic_validation.py
tests/xsd/: test_xsd_validation.py
